# AppointmentSystem

./: .coverage  .env.example  .gitignore  README.md  TODO.md  authentication_flow.graphql  authentication_guide.md  auto_uuid_queries.graphql  chat_widget.js  check_enums.sql  cleanup.ps1  client_creation_example.graphql  client_creation_steps.md  client_queries.gql  client_queries.graphql  complete_example.graphql  create_test_user.py  create_user.graphql  create_user_client.py  delete_user.graphql  example_client_mutation.graphql  example_queries.gql  example_queries.graphql  graphql_headers_guide.md  graphql_instructions.md  id_system_examples.md  index.html  insert_client.sql  insert_test_data.sql  list_users.graphql  pyproject.toml  pytest.ini  requirements.txt  setup_env.ps1  simple_examples.graphql  test-requirements.txt  test_clients.graphql  test_graphql.py  test_queries.graphql  test_user_queries.graphql  (+5 more)
Bitwarden CLI/: data.json
backend/: README.md  conftest.py  package.json  pyproject.toml  pytest.ini  run_tests.py
backend/scripts/: direct_report.py  grant_test_permissions.sql  run_permissions.py  run_tests.py
backend/src/main/: auth.py  cache.py  config.py  database.py  graphql_context.py  graphql_schema.py  models.py  mutations.py  queries.py  schema.py  schema_types.py  server.py  typing.py
backend/src/test/: test_graphql.py  test_models.py
backend/src/tests/: __init__.py  conftest.py  test_auth.py  test_db_connection.py
backend/src/utils/: db_connection.py
backend/test-reports/: .gitkeep
backend/test-reports/2025-03/25/203314/database/: summary.txt
backend/test-reports/2025-03/25/203354/database/: summary.txt
backend/test-reports/2025-03/25/211705/database/: summary.txt
backend/test-reports/2025-03/25/211745/database/: summary.txt
backend/test-reports/2025-03/25/212000/database/: summary.txt
backend/test-reports/2025-03/25/212202/database/: summary.txt
backend/test-reports/2025-03/25/212423/database/: summary.txt
backend/test-reports/2025-03/25/220320/database/: summary.txt
backend/test-reports/2025-03/25/221809/database/: summary.txt
backend/test-reports/2025-03/25/223509/database/: report.html  summary.txt
backend/test-reports/2025-03/25/224640/database/: report.html  summary.txt
backend/test-reports/2025-03/25/224918/database/: report.html  summary.txt
backend/test-reports/2025-03/25/225107/database/: report.html  summary.txt
backend/test-reports/2025-03/25/225614/database/: report.html  summary.txt
backend/test-reports/2025-03/25/230653/database/: report.html  summary.txt
backend/test-reports/2025-03/26/011231/: report.html  summary.txt
backend/test-reports/2025-03/26/011310/database/: report.html  summary.txt
backend/test-reports/2025-03/26/011628/database/: report.html  summary.txt
backend/test-reports/2025-03/26/011916/database/: report.html  summary.txt
backend/test-reports/2025-03/26/012525/database/: report.html  summary.txt
backend/test-reports/2025-03/26/013356/database/: report.html  summary.txt
backend/test-reports/2025-03/26/120326/database/: report.html  summary.txt
backend/test-reports/2025-03/26/120621/database/: report.html  summary.txt
backend/test-reports/2025-03/26/120642/database/: report.html  summary.txt
backend/test-reports/2025-03/26/121514/database/: report.html  summary.txt
backend/test-reports/2025-03/26/121701/database/: report.html  summary.txt
backend/test-reports/2025-03/26/121852/database/: report.html  summary.txt
backend/test-reports/2025-03/26/122053/database/: report.html  summary.txt
backend/test-reports/2025-03/26/122107/database/: report.html  summary.txt
backend/test-reports/2025-03/26/122324/database/: report.html  summary.txt
backend/test-reports/2025-03/26/122421/database/: report.html  summary.txt
backend/test-reports/2025-03/26/122436/database/: report.html  summary.txt
backend/test-reports/2025-03/26/130647/database/: report.html  summary.txt
backend/test-reports/2025-03/26/134942/database/: report.html  summary.txt
backend/tests/: README.md  conftest.py  fix_css.py
backend/tests/assets/: custom_style.css  custom_style.css.bak
backend/tests/auth/: test_auth.py
backend/tests/database/: test_db_connection.py
(+124 files in other folders)
