[tool.poetry]
name = "appointment-system"
version = "0.1.0"
description = "A robust appointment scheduling system with GraphQL API"
authors = ["John Nguyen <john.nguyen@gmail.com>"]

[tool.poetry.scripts]
start = "src.main.server:start"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
strawberry-graphql = "^0.219.0"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
nanoid = "^2.0.0"
pydantic = "^2.6.3"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appointment-system"
version = "0.1.0"
description = "A robust appointment scheduling system with GraphQL API"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "strawberry-graphql>=0.219.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "nanoid>=2.0.0",
    "pydantic[email]>=2.6.3",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.1",
    "PyJWT>=2.8.0"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
